crates/panache-parser/tests/snapshots/yaml__yaml_suite_CTN5.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: CTN5
input: "---\n[ a, b, c, , ]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_FLOW_SEQUENCE_COMMA:invalid comma position in flow sequence@15..16]
