crates/panache-parser/tests/snapshots/yaml__yaml_suite_CUP7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: CUP7
input: "anchored: !local &anchor value\nalias: *anchor\n"
has_error_contract: false
parsed_mapping_tree: true
