crates/panache-parser/tests/snapshots/yaml__yaml_suite_CXX2.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: CXX2
input: "--- &anchor a: b\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_TRAILING_CONTENT_AFTER_DOCUMENT_START:trailing content after document start marker@0..16]
