crates/panache-parser/tests/snapshots/yaml__yaml_suite_D49Q.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: D49Q
input: "'a\\nb': 1\n'c\n d': 1\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@10..10]
