crates/panache-parser/tests/snapshots/yaml__yaml_suite_D83L.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: D83L
input: "- |2-\n  explicit indent and chomp\n- |-2\n  chomp and explicit indent\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
