crates/panache-parser/tests/snapshots/yaml__yaml_suite_D88J.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: D88J
input: "a: [b, c]\n"
parsed_mapping_tree: true
