crates/panache-parser/tests/snapshots/yaml__yaml_suite_D9TU.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: D9TU
input: "foo: bar\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
