crates/panache-parser/tests/snapshots/yaml__yaml_suite_DC7X.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DC7X
input: "a: b\t\nseq:\t\n - a\t\nc: d\t#X\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
