crates/panache-parser/tests/snapshots/yaml__yaml_suite_DFF7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: DFF7
input: "{\n? explicit: entry,\nimplicit: entry,\n?\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
