crates/panache-parser/tests/snapshots/yaml__yaml_suite_DHP8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 871
expression: snapshot
---
case_id: DHP8
input: "[foo, bar, 42]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
