crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK3J.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: DK3J
input: "--- >\nline1\n# no comment\nline3\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
